--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -29,18 +29,32 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key"/>
-        <activity android:name=".MainActivity"></activity>
-        <activity
-            android:name=".MapsActivity"
-            android:label="@string/title_activity_maps">
+
+        <activity android:name=".DestinationListActivity"/>
+        <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".Menu_Activity"></activity>
-        <activity android:name=".View_destination"></activity>
+        <activity
+            android:name=".MapsActivity"
+            android:label="@string/title_activity_maps">
+        </activity>
+        <activity android:name=".MenuActivity"/>
+        <activity android:name=".ViewDestinationDetailActivity"/>
+        <activity android:name=".Gallery"/>
+        <activity android:name=".Survey"/>
+        <activity android:name=".Faq"/>
+        <activity android:name=".Rating"/>
+        <activity android:name=".YouTubeTesting">
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/title_activity_main1"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
     </application>
 
 </manifest>
